Fix a bug about mix-blend-mode and overflow-x

--- a/assets/_src/sass/foundation/_base.scss
+++ b/assets/_src/sass/foundation/_base.scss
@@ -6,10 +6,6 @@
 	box-sizing: border-box;
 }
 
-html {
-	overflow-x: hidden;
-}
-
 body {
 	@include font-smoothing;
 	background-color: #fff;
@@ -31,7 +27,6 @@ body {
 	font-weight: 300;
 	line-height: 1.5;
 	margin: 0;
-	min-height: 100vw;
 	overflow-x: hidden;
 }
 
@@ -94,6 +89,7 @@ figcaption {
 }
 
 .main {
+	overflow: hidden;
 	width: 100vw;
 }
 
